Switch app services to PostgreSQL-only persistence